--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Yota Toyama <raviqqe@gmail.com>"]
 
 [dependencies]
+num = "0.1"
+docopt = "0.6"
+lazy_static = "0.2"
+log = "0.3"
