--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 authors = ["Yota Toyama <raviqqe@gmail.com>"]
 
 [dependencies]
+nanomsg = "0.6"
 num = "0.1"
 docopt = "0.6"
 lazy_static = "0.2"
 log = "0.3"
 serde = "0.8"
+serde_macros = "0.8"
 serde_json = "0.8"
 rand = "0.3"
